<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >
    <ImageView android:src="@drawable/laz_gold" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView1" android:layout_gravity="center_horizontal" android:paddingTop="20dp"></ImageView>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1" android:layout_height="wrap_content" android:textColor="#8b0000" android:layout_gravity="center" android:layout_width="wrap_content" android:text="@string/MainText"></TextView>
    <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:textColor="#8b0000" android:text="@string/MainText2" android:layout_gravity="center" android:layout_marginBottom="10dp"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/Versionsstand"></TextView>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:textColor="#8b0000" android:text="@string/Copyright"></TextView>
    <Button android:text="Button" android:layout_height="wrap_content" android:id="@+id/button1" android:layout_width="163dp" android:layout_marginTop="50dp" android:layout_gravity="center"></Button>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_gravity="center" android:text="@string/Programmversion" android:layout_marginTop="10dp"></TextView>
</LinearLayout>
